--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -5,12 +5,16 @@
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
 
-
-        <item name="colorAccent">@color/white</item>
-        <item name="colorControlActivated">@color/white</item>
-
         <item name="colorMainBack">@color/l_dark</item>
 
+        <item name="colorAccent">@color/white</item>
+
         <item name="textColorMain">@color/m_white</item>
+    </style>
+    <!-- added in 1.0.1 -->
+    <style name="Theme.AppCompat.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/icl_back</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/avd_launcher</item>
+        <item name="postSplashScreenTheme">@style/AppTheme</item>
     </style>
 </resources>
