--- a/app/src/main/res/anim/splash_anim.xml
+++ b/app/src/main/res/anim/splash_anim.xml
@@ -5,14 +5,23 @@
         <objectAnimator
             android:duration="500"
             android:propertyName="scaleX"
+            android:valueType="floatType"
             android:valueFrom="1.0"
             android:valueTo="1.3"
             android:interpolator="@android:anim/accelerate_decelerate_interpolator" />
         <objectAnimator
             android:duration="500"
             android:propertyName="scaleY"
+            android:valueType="floatType"
             android:valueFrom="1.0"
             android:valueTo="1.3"
+            android:interpolator="@android:anim/accelerate_decelerate_interpolator" />
+        <objectAnimator
+            android:duration="500"
+            android:propertyName="rotation"
+            android:valueType="floatType"
+            android:valueFrom="0"
+            android:valueTo="30"
             android:interpolator="@android:anim/accelerate_decelerate_interpolator" />
     </set>
 
@@ -20,20 +29,23 @@
         <objectAnimator
             android:duration="400"
             android:propertyName="scaleX"
+            android:valueType="floatType"
             android:valueFrom="1.3"
             android:valueTo="0.0"
             android:interpolator="@android:anim/accelerate_decelerate_interpolator" />
         <objectAnimator
             android:duration="400"
             android:propertyName="scaleY"
+            android:valueType="floatType"
             android:valueFrom="1.3"
             android:valueTo="0.0"
             android:interpolator="@android:anim/accelerate_decelerate_interpolator" />
         <objectAnimator
             android:duration="400"
             android:propertyName="rotation"
-            android:valueFrom="0"
-            android:valueTo="40"
+            android:valueType="floatType"
+            android:valueFrom="30"
+            android:valueTo="-300"
             android:interpolator="@android:anim/accelerate_decelerate_interpolator" />
     </set>
 </set>
